# HISOKA-firmware

./: async.py  configure_wifi.py  pyproject.toml  wifi.json
src/: boot.py  main.py
src/config/: led.py  receiver.py  serial_config.py  wifi_config.py
src/net/: update.py  wifi.py
src/radio/: espnow_comm.py  receiver.py  sender.py
