[project]
name = "HISOKA-firmware"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Henrycke Bozza Schenberk", email = "0Kerryhen@pm.me"},
]
dependencies = ["mpremote>=1.25.0", "pyserial>=3.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
